# -medical-ai-assistant

./: .env.example  .gitignore  02LangChain访问阿里云通义.py  03LangChain访问Ollama本地模型.py  Dockerfile  README.md  app.py  docker-compose.yml  openAI流式输出.py  pyproject.toml  大模型初使用.py
.claude/: settings.local.json
21长期会话记忆/: 临时会话记忆.py  长期会话记忆.py
RAG案例/: app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  rag.py  vector_stores.py  新建 文本文档.txt
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py
config/: chroma.yml  rag.yml
data/: 扫地机器人.txt  扫拖机器人选购指南100条.txt  故障排除.txt
data/eval/: qa_golden_set.jsonl
data/kg/: fault_trees.yaml
data/knowledge/equipment_specs/: ct_ge_revolution.txt  ct_scanner_med-ct-3200.txt  monitor_mindraybeneview.txt  (+3 more)
model/: factory.py
prompts/: main_prompt.txt  rag_summarize.txt  report_prompt.txt
prompts/v1/: rag_answer.txt
rag/: rag_service.py  vector_store.py
scripts/: generate_golden_set.py  ingest_and_test.py  run_eval.py
src/: __main__.py
src/api/: app.py
src/api/routes/: kb.py  (+1 more)
src/eval/: dataset.py  metrics.py  runner.py
src/infra/: db.py  models.py
src/kb/: chunking.py  indexer.py
src/memory/: manager.py
src/shared/: config.py  exceptions.py  logging.py
tests/integration/: test_agent_flow.py  test_rag_pipeline.py
tests/unit/: test_api_schemas.py  test_chunking.py  test_config.py  test_dataset.py  test_kb_indexer.py  test_memory.py  test_metrics.py  test_routing.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
(+15 files in other folders)
